# news_aggregator

./: .env.example  .gitignore  EPIC2_SUMMARY.md  EPIC4_SUMMARY.md  README.md  alembic.ini  pyproject.toml  requirements.txt  test.ipynb  test_setup.py
alembic/: env.py
alembic/versions/: 2024_12_16_1200-001_initial_schema.py
app/bots/control_bot/: bot.py  callbacks.py  forward_worker.py  handlers_filters.py  handlers_settings.py  handlers_sources.py  keyboards.py  middlewares.py  runner.py  states.py  validation.py
app/bots/user_bot/: __init__.py  client.py  handlers.py  runner.py
app/config/: settings.py
app/domain/: __init__.py  entities.py
app/filters/: __init__.py  keyword_matcher.py  pipeline.py  semantic_matcher.py
app/infra/db/: __init__.py  base.py  models.py  repositories.py
app/infra/logging/: config.py
app/nlp/: __init__.py  embeddings.py  preprocess.py
app/routing/: dispatcher.py
app/tests/unit/: test_control_bot_handlers.py  test_control_bot_validation.py  test_embeddings.py  test_entities.py  test_forward_worker.py  test_keyword_matcher.py  test_pipeline.py  test_preprocess.py  test_semantic_matcher.py  test_user_bot_datetime.py
docs/: EPIC3_SUMMARY.md  EPIC6SUMMARY.md  EPIC7SUMMARY.md
examples/: db_usage.py  keyword_filter_demo.py
scripts/: check_db.py  check_nlp_dependencies.py  init_db.py
